--- a/estilo.css
+++ b/estilo.css
@@ -77,6 +77,8 @@
         text-align: center;
         padding-left: 2cm;
         padding-right: 2cm;
+        padding-top: 2%;
+        padding-bottom: 2%;
     }
 
     .containerhr {
@@ -141,6 +143,7 @@
         font-weight: 400;
         line-height: normal;
         width: 32%;
+        margin-bottom: -140px;
 
     }
 
@@ -252,6 +255,8 @@
         text-align: center;
         padding-left: 2cm;
         padding-right: 2cm;
+        padding-top: 5%;
+        padding-bottom: 5%;
     }
 
     .containerhr {
@@ -303,6 +308,8 @@
         justify-content: space-between;
         max-width: 100%;
         flex-wrap: wrap;
+        
+        
 
     }
 
@@ -315,6 +322,7 @@
         width: 100%;
         height: 65%;
         flex-shrink: 0;
+        
     }
 
 
@@ -328,6 +336,7 @@
         font-style: normal;
         font-weight: 400;
         line-height: normal;
+        margin-bottom: -10%;
 
 
     }
